[cli] Update Amper JBR version to 21